gui: v 1.0